feat: add dropwdown to header

--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -7,7 +7,7 @@
 }
 
 /*CONTAINER 1400*/
-.container{
+.ms-container{
     width: 1400px;
     margin: 0 auto;
 }
@@ -23,7 +23,7 @@
 }
 
 /*CLASSE ACTIVE*/
-.active{
+.ms-active{
     color: #f2870c
 }
 
@@ -39,6 +39,6 @@
 }
 
 /*spazio per i titoli*/
-.space{
+.ms-space{
     margin-bottom: 30px;
 }
